<?xml version="1.0"?>
<package format="2">
  <name>cob_docker_control</name>
  <version>0.6.4</version>
  <description>Autonomous docking</description>

  <license>private</license>

  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
  <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
