<package>
  <name>cob_lbr</name>
  <version>0.5.0</version>
  <description>cob_lbr</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_lbr</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>rosjava_jni</build_depend> -->

  <!-- <test_depend>rosjava_jni</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>cob_srvs</test_depend> -->
  <!-- <test_depend>brics_actuator</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->

  <export>

  </export>
</package>
