<package>
  <name>cob_lbr</name>
  <version>0.6.1</version>
  <description>cob_lbr</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_lbr</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
