<?xml version="1.0"?>
<package format="2">
  <name>cob_reflector_referencing</name>
  <version>0.6.5</version>
  <description>
    This package provides a node broadcasting a tf frame based on reflector markers detected within sensor_msgs::LaserScan messages.
    It can be used to position/reference a robot wrt to the reflektor markers.
  </description>

  <license>private</license>

  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
  <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
