<package format="2">
  <name>cob_safety_controller</name>
  <version>0.6.3</version>
  <description>This package is a substitute for the private implementation of cob_safety_controller package</description>

  <maintainer email="mdl@ipa.fhg.de">Matthias Luedtke</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
