<package format="2">
  <name>cob_safety_controller</name>
  <version>0.6.5</version>
  <description>This package is a substitute for the private implementation of cob_safety_controller package</description>

  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
