<package format="2">
  <name>cob_substitute</name>
  <version>0.6.3</version>
  <description>cob_substitute</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_substitute</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_lbr</exec_depend>
  <exec_depend>cob_safety_controller</exec_depend>
  <exec_depend>frida_driver</exec_depend>
  <exec_depend>prace_common</exec_depend>
  <exec_depend>prace_gripper_driver</exec_depend>
  <exec_depend>softkinetic_camera</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
