<package>
  <name>frida_driver</name>
  <version>0.6.1</version>
  <description>frida_driver</description>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/frida_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
