<package format="2">
  <name>prace_gripper_driver</name>
  <version>0.6.4</version>
  <description>prace_gripper_driver</description>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/prace_gripper_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
