<package>
  <name>ur_driver</name>
  <version>0.1.0</version>
  <description>ur_driver</description>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ur_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
